avoid text overflowing

--- a/style.css
+++ b/style.css
@@ -18,6 +18,17 @@
   margin: 0;
 }
 
+/* Avoid text overflow */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
 body {
   margin: 0;
   background: url("./images/bg-pattern-top.svg") no-repeat,
